--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
-    <uses-permission android:name="android.permission.INTERNET"></uses-permission>
+
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -13,7 +15,7 @@
         android:theme="@style/Theme.MusicAppNoFragments"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
+            android:name=".view.EntryActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -21,8 +23,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="org.milaifontanals.musicappnofragments.TracklistActivity" />
-        <activity android:name="org.milaifontanals.musicappnofragments.EditAlbumActivity" />
+        <activity
+            android:name=".MainActivity"
+            android:exported="true"></activity>
+        <activity android:name=".TracklistActivity" />
+        <activity android:name=".EditAlbumActivity" />
     </application>
 
 </manifest>
